Added needed arguments for context load tests